adding google search

--- a/genindex.html
+++ b/genindex.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="m7DCGR4lnTAEi3nTamTNobKUKdax0UIKhUrEXnWx2-0" />
     <title>Index &#8212; Open Source Geospatial Programming &amp; Remote Sensing</title>
     
   <link rel="stylesheet" href="_static/css/index.f658d18f9b420779cfdf24aa0a7e2d77.css">
